spec/error_constructor_mismatch.expected
spec/error_constructor_mismatch.kex:3:7: error: cannot match `Ok` — expected Result, got (Integer, String)?
spec/error_constructor_mismatch.kex:4:7: error: cannot match `Just` — expected Optional, got Result<Integer, ParseError>
Aborted: fix type errors before running (use --no-check to skip).
